--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,13 +2,16 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 	package="com.rainbowwolfer.myspacedemo1">
 	
+	<uses-permission android:name="android.permission.INTERNET"/>
+	
 	<application
 		android:allowBackup="true"
 		android:icon="@mipmap/ic_launcher"
 		android:label="@string/app_name_space"
 		android:roundIcon="@mipmap/ic_launcher_round"
 		android:supportsRtl="true"
-		android:theme="@style/Theme.MySpaceDemo1">
+		android:theme="@style/Theme.MySpaceDemo1"
+		android:usesCleartextTraffic="true">
 		<activity
 			android:name="com.rainbowwolfer.myspacedemo1.ui.activities.user.LoginActivity"
 			android:exported="false"
