--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,11 +13,14 @@
 		android:theme="@style/Theme.MySpaceDemo1"
 		android:usesCleartextTraffic="true">
 		<activity
-			android:name="com.rainbowwolfer.myspacedemo1.ui.activities.user.LoginActivity"
+			android:name=".ui.activities.post.PostActivity"
+			android:exported="false"/>
+		<activity
+			android:name=".ui.activities.user.LoginActivity"
 			android:exported="false"
 			android:windowSoftInputMode="adjustPan"/>
 		<activity
-			android:name="com.rainbowwolfer.myspacedemo1.ui.activities.welcome.WelcomeActivity"
+			android:name=".ui.activities.welcome.WelcomeActivity"
 			android:exported="true"
 			android:theme="@style/Theme.MySpaceDemo1.NoActionBar">
 			<intent-filter>
@@ -27,7 +30,7 @@
 			</intent-filter>
 		</activity>
 		<activity
-			android:name="com.rainbowwolfer.myspacedemo1.ui.activities.main.MainActivity"
+			android:name=".ui.activities.main.MainActivity"
 			android:exported="true"
 			android:theme="@style/Theme.MySpaceDemo1.NoActionBar"
 			android:windowSoftInputMode="adjustPan"/>
