Gradle & Plugins Update

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,7 @@ android {
         viewBinding true
         dataBinding true
     }
+    namespace 'com.rainbowwolfer.myspacedemo1'
 }
 
 dependencies {
