--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
 	<uses-permission android:name="android.permission.INTERNET"/>
 	
 	<application
-		android:name="com.rainbowwolfer.myspacedemo1.models.api.application.MySpaceApplication"
+		android:name="com.rainbowwolfer.myspacedemo1.models.application.MySpaceApplication"
 		android:allowBackup="true"
 		android:icon="@mipmap/ic_launcher"
 		android:label="@string/app_name_space"
@@ -13,6 +13,9 @@
 		android:supportsRtl="true"
 		android:theme="@style/Theme.MySpaceDemo1"
 		android:usesCleartextTraffic="true">
+		<activity
+			android:name=".ui.activities.imagesdisplay.ImagesDisplayActivity"
+			android:exported="false"/>
 		<activity
 			android:name=".ui.activities.post.PostActivity"
 			android:exported="false"/>
