--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,7 +38,7 @@
 			android:name=".ui.activities.main.MainActivity"
 			android:exported="true"
 			android:theme="@style/Theme.MySpaceDemo1.NoActionBar"
-			android:windowSoftInputMode="adjustPan"/>
+			android:windowSoftInputMode="adjustResize"/>
 	</application>
 
 </manifest>
