--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
 	<uses-permission android:name="android.permission.INTERNET"/>
 	
 	<application
-		android:name="com.rainbowwolfer.myspacedemo1.models.application.MySpaceApplication"
+		android:name="com.rainbowwolfer.myspacedemo1.services.application.MySpaceApplication"
 		android:allowBackup="true"
 		android:icon="@mipmap/ic_launcher"
 		android:label="@string/app_name_space"
