--- a/app/build.gradle
+++ b/app/build.gradle
@@ -127,7 +127,12 @@ dependencies {
     implementation "androidx.room:room-paging:2.5.0-alpha01"
 
 //    implementation "com.android.support:support-emoji:28.0.0"
-
+    implementation "com.squareup.picasso:picasso:2.8"
+    def glide_version = "4.13.1"
+    implementation "com.github.bumptech.glide:glide:$glide_version"
+    kapt "com.github.bumptech.glide:compiler:$glide_version"
+// 权限管理
+    implementation "com.guolindev.permissionx:permissionx:1.6.4"
 }
 
 
