--- a/settings.gradle
+++ b/settings.gradle
@@ -1,5 +1,9 @@
 pluginManagement {
     repositories {
+        maven {
+            allowInsecureProtocol = true
+            url 'http://192.168.20.:8081/repository/java-group'
+        }
         gradlePluginPortal()
         google()
         mavenCentral()
@@ -9,6 +13,10 @@ pluginManagement {
 dependencyResolutionManagement {
     repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
     repositories {
+        maven {
+            allowInsecureProtocol = true
+            url 'http://192.168.20.:8081/repository/java-group'
+        }
         google()
         mavenCentral()
         maven { url 'https://jitpack.io' }
