--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,10 @@
 	package="com.rainbowwolfer.myspacedemo1">
 	
 	<uses-permission android:name="android.permission.INTERNET"/>
-	
+	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+	<uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE" />
+
 	<application
 		android:name="com.rainbowwolfer.myspacedemo1.services.application.MySpaceApplication"
 		android:allowBackup="true"
