--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,10 +45,12 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
-
     packagingOptions {
-        exclude 'META-INF/atomicfu.kotlin_module'
+        resources {
+            excludes += ['META-INF/atomicfu.kotlin_module']
+        }
     }
+
 
     buildFeatures {
         viewBinding true
